# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
#

2005-05-06 15:54:33 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-29

    Summary:
      catalog, index common words and one letter words too
    Revision:
      itools--main--0.9--patch-29


    modified files:
     Changelog catalog/Analysers.py catalog/Catalog.py


2005-05-06 15:37:29 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-28

    Summary:
      catalog, add phrase search
    Revision:
      itools--main--0.9--patch-28


    modified files:
     Changelog catalog/Analysers.py catalog/Catalog.py
     catalog/IIndex.py catalog/test.py


2005-05-06 13:52:17 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-27

    Summary:
      catalog, keep document positions
    Revision:
      itools--main--0.9--patch-27

    The index format has changed.

    modified files:
     Changelog catalog/IIndex.py


2005-05-03 16:40:28 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-26

    Summary:
      documentation, now it is a book, start index
    Revision:
      itools--main--0.9--patch-26


    modified files:
     Changelog doc/Makefile doc/itools.tex doc/types.tex
     doc/uri.tex


2005-05-03 15:46:35 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-25

    Summary:
      documentation, add a chapter about "itools.types"
    Revision:
      itools--main--0.9--patch-25


    new files:
     doc/.arch-ids/types.tex.id doc/types.tex

    modified files:
     Changelog doc/Makefile doc/itools.tex


2005-05-02 06:58:32 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-24

    Summary:
      handlers, fix "set_handler"
    Revision:
      itools--main--0.9--patch-24


    modified files:
     Changelog handlers/Folder.py


2005-05-01 18:13:08 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-23

    Summary:
      handlers, add "get_handler" to file handlers
    Revision:
      itools--main--0.9--patch-23
